infra/modules/network/azurerm_network_interface_security_group_association.tf
# NICとNSGの関連付け
resource "azurerm_network_interface_security_group_association" "web_nic_nsg" {
  network_interface_id      = azurerm_network_interface.web_nic.id
  network_security_group_id = azurerm_network_security_group.web_nsg.id
}
